--- a/index.html
+++ b/index.html
@@ -4,55 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>110 -Calender</title>
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
    <div class="container">
     <fieldset class="calender">
         <legend class="month">January</legend>
-        <div class="day">S</div>
-        <div class="day">M</div>
-        <div class="day">T</div>
-        <div class="day">W</div>
-        <div class="day">T</div>
-        <div class="day-red">F</div>
-        <div class="day-red">S</div>
-        <div class="date">1</div>
-        <div class="date">2</div>
-        <div class="date">3</div>
-        <div class="date">4</div>
-        <div class="date">5</div>
-        <div class="date-red">6</div>
-        <div class="date-red">7</div>
-        <div class="date">8</div>
-        <div class="date">9</div>
-        <div class="date">10</div>
-        <div class="date">11</div>
-        <div class="date">12</div>
-        <div class="date-red">13</div>
-        <div class="date-red">14</div>
-        <div class="date">15</div>
-        <div class="date">16</div>
-        <div class="date">17</div>
-        <div class="date">18</div>
-        <div class="date">19</div>
-        <div class="date-red">20</div>
-        <div class="date-red">21</div>
-        <div class="date">22</div>
-        <div class="date">23</div>
-        <div class="date">24</div>
-        <div class="date">25</div>
-        <div class="date">26</div>
-        <div class="date-red">27</div>
-        <div class="date-red">28</div>
-        <div class="date">29</div>
-        <div class="date">30</div>
-        <div class="date">31</div>
-        <div class="date-next">1</div>
-        <div class="date-next">2</div>
-        <div class="date-next">3</div>
-        <div class="date-next">4</div>
+        <div class="day"><p title="Sunday">S</p></div>
+        <div class="day"><p title="Monday">M</p></div>
+        <div class="day"><p title="Tuesday">T</p></div>
+        <div class="day"><p title="Wednesday">W</p></div>
+        <div class="day"><p title="Thursday">T</p></div>
+        <div class="day-red"><p title="Friday">F</p></div>
+        <div class="day-red"><p title="Saturday">S</p></div>
+        <div class="date"><p title="Sunday">1</p></div>
+        <div class="date"><p title="Monday">2</p></div>
+        <div class="date"><p title="Tuesday">3</p></div>
+        <div class="date"><p title="Wednesday">4</p></div>
+        <div class="date"><p title="Thursday">5</p></div>
+        <div class="date-red"><p title="Friday">6</p></div>
+        <div class="date-red"><p title="Saturday">7</p></div>
+        <div class="date"><p title="Sunday">8</p></div>
+        <div class="date"><p title="Monday">9</p></div>
+        <div class="date"><p title="Tuesday">10</p></div>
+        <div class="date"><p title="Wednesday">11</p></div>
+        <div class="date"><p title="Thursday">12</p></div>
+        <div class="date-red"><p title="Friday">13</p></div>
+        <div class="date-red"><p title="Saturday">14</p></div>
+        <div class="date"><p title="Sunday">15</p></div>
+        <div class="date"><p title="Monday">16</p></div>
+        <div class="date"><p title="Tuesday">17</p></div>
+        <div class="date"><p title="Wednesday">18</p></div>
+        <div class="date"><p title="Thursday">19</p></div>
+        <div class="date-red"><p title="Friday">20</p></div>
+        <div class="date-red"><p title="Saturday">21</p></div>
+        <div class="date"><p title="Sunday">22</p></div>
+        <div class="date"><p title="Monday">23</p></div>
+        <div class="date"><p title="Tuesday">24</p></div>
+        <div class="date"><p title="Wednesday">25</p></div>
+        <div class="date"><p title="Thursday">26</p></div>
+        <div class="date-red"><p title="Friday">27</p></div>
+        <div class="date-red"><p title="Saturday">28</p></div>
+        <div class="date"><p title="Sunday">29</p></div>
+        <div class="date"><p title="Monday">30</p></div>
+        <div class="date"><p title="Tuesday">31</p></div>
+        <div class="date-next"><p title="Wednesday">1</p></div>
+        <div class="date-next"><p title="Thursday">2</p></div>
+        <div class="date-next"><p title="Friday">3</p></div>
+        <div class="date-next"><p title="Saturday">4</p></div>
     </fieldset>
    </div>
 </body>
